--- a/rocro.yaml
+++ b/rocro.yaml
@@ -1,10 +1,11 @@
 inspecode:
+  experimental:
+    ignore: /*_test.go
   # golang configuration.
   cpd: default
   gas: default
   unused: default
   errcheck: default
-    ignore: /*_test.go
   go-test: default
   go-vet: default
   gofmt: default
